<?xml version="1.0"?>
<package format="2">
  <name>inference_demo</name>
  <version>1.0.0</version>
  <description>ROS inference demo for robot control</description>
  
  <maintainer email="user@todo.todo">Your Name</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>eigen</depend>

  <export>
  </export>
</package>

